--- a/model_maker.ipynb
+++ b/model_maker.ipynb
@@ -32,6 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import required modules\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "from tensorflow import keras\n",
@@ -47,6 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# set required directories\n",
     "train_dir = \"./dataset/train/\"\n",
     "valid_dir = \"./dataset/valid/\"\n",
     "IMAGE_DIMS = (256,256)"
@@ -58,6 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create image data generator\n",
     "datagen = ImageDataGenerator(rescale=1./255)"
    ]
   },
@@ -76,6 +79,7 @@
     }
    ],
    "source": [
+    "# load the images from the directories\n",
     "train_data = datagen.flow_from_directory(train_dir, target_size=IMAGE_DIMS, batch_size=20, class_mode=\"categorical\", color_mode=\"rgb\", shuffle=True)\n",
     "valid_data = datagen.flow_from_directory(valid_dir, target_size=IMAGE_DIMS, batch_size=20, class_mode=\"categorical\", color_mode=\"rgb\", shuffle=True)"
    ]
@@ -86,6 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# set required parameters\n",
     "INPUT_SHAPE = train_data[0][0].shape[1:]\n",
     "NUM_OUTPUT_LAYER = len(train_data.class_indices)"
    ]
@@ -96,6 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load pre-trained model\n",
     "pre_trained_model = InceptionV3(input_shape=INPUT_SHAPE, include_top=False)\n",
     "for layer in pre_trained_model.layers:\n",
     "    layer.trainable = False\n",
@@ -108,6 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create untrained model using functional API\n",
     "x = keras.layers.Conv2D(16, (3,3), activation=\"relu\", name=\"CONV-TRAINABLE-1\")(last_layer)\n",
     "x = keras.layers.MaxPool2D(2,2)(x)\n",
     "x = keras.layers.Conv2D(32, (3,3), activation=\"relu\", name=\"CONV-TRAINABLE-2\")(x)\n",
@@ -652,6 +659,7 @@
     }
    ],
    "source": [
+    "# print model summary\n",
     "model.summary()"
    ]
   },
@@ -661,6 +669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create tensorboard callback\n",
     "tb_callback = keras.callbacks.TensorBoard(\"logs/v2/\", histogram_freq=1, write_images=True, update_freq=\"batch\")"
    ]
   },
@@ -707,6 +716,7 @@
     }
    ],
    "source": [
+    "# train the model\n",
     "model.fit(train_data, validation_data=valid_data, epochs=10, callbacks=[tb_callback])"
    ]
   },
@@ -728,6 +738,7 @@
     }
    ],
    "source": [
+    "# save model\n",
     "model.save(\"./models/model_v3_b20_trainable_conv.model\")"
    ]
   },
@@ -737,11 +748,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import required modules for testing purpose\n",
     "from tensorflow import keras\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing import image\n",
     "import numpy as np\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "import os"
    ]
   },
   {
@@ -750,16 +763,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load the model\n",
     "model = keras.models.load_model(\"./models/model_v3_b20_trainable_conv.model\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
    ]
   },
   {
@@ -768,14 +773,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create function for testing\n",
     "def predict_image(IMAGE_PATH, classes):\n",
+    "    # open and load the image from the path\n",
     "    img = image.load_img(IMAGE_PATH, target_size=(IMAGE_DIMS), color_mode='rgb')\n",
+    "    \n",
+    "    # convert the image to a numpy array\n",
     "    x = image.img_to_array(img)\n",
+    "    \n",
+    "    # normalize the image\n",
     "    x = np.expand_dims(x, axis=0)/255\n",
+    "\n",
     "    images = np.vstack([x])\n",
+    "\n",
+    "    # predict the class\n",
     "    test = model(images)\n",
+    "\n",
+    "    # get the index of the class with the highest probability\n",
     "    p_class = np.argmax(test.numpy()[0])\n",
+    "\n",
+    "    # get the class name\n",
     "    probabilty = test[0][p_class].numpy()\n",
+    "\n",
+    "    # print the class name and the probability\n",
     "    return classes[p_class], round(probabilty*100, 2)"
    ]
   },
@@ -785,6 +805,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# testing on an image\n",
     "test = predict_image(\"./dataset/test/corn_rust.jpg\", os.listdir(\"./dataset/train\"))"
    ]
   },
@@ -814,6 +835,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# iske aage yaad nahi kya kiya tha\n",
     "import json\n",
     "import random"
    ]
