--- a/model_maker.ipynb
+++ b/model_maker.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\vedan\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\vedan\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\numpy\\.libs\\libopenblas.PYQHXLVVQ7VESDPUVUADXEVJOBGHJPAY.gfortran-win_amd64.dll\n",
-      "C:\\Users\\vedan\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#config GPU to not cause any error while training\n",
     "from tensorflow.compat.v1 import ConfigProto\n",
@@ -38,7 +27,6 @@
     "from tensorflow import keras\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.preprocessing import image\n",
-    "import numpy as np\n",
     "from tensorflow.keras.applications.inception_v3 import InceptionV3"
    ]
   },
@@ -91,7 +79,7 @@
    "outputs": [],
    "source": [
     "# set required parameters\n",
-    "INPUT_SHAPE = train_data[0][0].shape[1:]\n",
+    "INPUT_SHAPE = train_data[0][0].shape[1:] # (256,256,3)\n",
     "NUM_OUTPUT_LAYER = len(train_data.class_indices)"
    ]
   },
@@ -744,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,15 +741,22 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing import image\n",
     "import numpy as np\n",
-    "from PIL import Image\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:SavedModel saved prior to TF 2.5 detected when loading Keras model. Please ensure that you are saving the model with model.save() or tf.keras.models.save_model(), *NOT* tf.saved_model.save(). To confirm, there should be a file named \"keras_metadata.pb\" in the SavedModel directory.\n"
+     ]
+    }
+   ],
    "source": [
     "# load the model\n",
     "model = keras.models.load_model(\"./models/model_v3_b20_trainable_conv.model\")"
@@ -769,28 +764,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create function for testing\n",
-    "def predict_image(IMAGE_PATH, classes):\n",
+    "def predict_image(IMAGE_PATH, classes): # classes = [\"D1\", \"D2\", \"D3\" ...]\n",
     "    # open and load the image from the path\n",
     "    img = image.load_img(IMAGE_PATH, target_size=(IMAGE_DIMS), color_mode='rgb')\n",
     "    \n",
     "    # convert the image to a numpy array\n",
-    "    x = image.img_to_array(img)\n",
+    "    x = image.img_to_array(img) # tf.keras.preprocessing.image.Image -> numpy.Array\n",
     "    \n",
     "    # normalize the image\n",
-    "    x = np.expand_dims(x, axis=0)/255\n",
+    "    x = np.expand_dims(x, axis=0)/255 # 0 -> 0, 255 -> 1 || divide values by 255\n",
     "\n",
-    "    images = np.vstack([x])\n",
+    "    images = np.vstack([x]) # make a vertical stack of the image\n",
     "\n",
     "    # predict the class\n",
     "    test = model(images)\n",
     "\n",
     "    # get the index of the class with the highest probability\n",
-    "    p_class = np.argmax(test.numpy()[0])\n",
+    "    p_class = np.argmax(test.numpy()[0]) # [2, 3, 6, 3] -> np.argmax() -> 2\n",
     "\n",
     "    # get the class name\n",
     "    probabilty = test[0][p_class].numpy()\n",
@@ -801,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,16 +806,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Corn_(maize)___Cercospora_leaf_spot Gray_leaf_spot', 98.17)"
+       "('Tomato___Target_Spot', 98.17)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
